--- a/osind.html
+++ b/osind.html
@@ -4,7 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>OS Materials</title>
-        <link rel="stylesheet" type="text/css" href="os.css">
+        <link rel="stylesheet" type="text/css" href="whole.css">
         <meta name="author" content="Divya Priya RK">
         <meta name="Keywords" content="VIT,University, Chennai, CVLA,ComplexVariables,LinearAlgebra,syllabus, catalogue, koha, library">
         <meta property="og:url" content="https://cvlamaterials.in/">
@@ -37,14 +37,14 @@
 </nav>
 <br>
         <br>
-        <img src="Screenshot 2025-06-19 193157.png" class="course">
+        <img src="os obj out.png" class="course">
 <br>
 <br>
 <h2>Recommended Books</h2>
 <div >
-    <a href="https://csc-knu.github.io/sys-prog/books/Andrew%20S.%20Tanenbaum%20-%20Modern%20Operating%20Systems.pdf"><img src="download.jpeg" class="book-img"/></a>
-    <a href="https://os.ecci.ucr.ac.cr/slides/Abraham-Silberschatz-Operating-System-Concepts-10th-2018.pdf"><img src="download (4).jpeg" class="book-img"/></a>
-    <a href="https://api.pageplace.de/preview/DT0400.9781292214306_A37747502/preview-9781292214306_A37747502.pdf"><img src="download (1).jpeg" class="book-img"/></a>
+    <a href="https://csc-knu.github.io/sys-prog/books/Andrew%20S.%20Tanenbaum%20-%20Modern%20Operating%20Systems.pdf"><img src="os book1.jpeg" class="book-img"/></a>
+    <a href="https://os.ecci.ucr.ac.cr/slides/Abraham-Silberschatz-Operating-System-Concepts-10th-2018.pdf"><img src="os book2.jpeg" class="book-img"/></a>
+    <a href="https://api.pageplace.de/preview/DT0400.9781292214306_A37747502/preview-9781292214306_A37747502.pdf"><img src="os book3.jpeg" class="book-img"/></a>
     </div>
 <h3>Check Books Availability in VIT Library</h3>
 <div class="cat"><a href="https://webopaccc.vit.ac.in/"> VIT Library Catalogue</a></div>
