--- a/osmod.html
+++ b/osmod.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>OS Materials</title>
-        <link rel="stylesheet" type="text/css" href="os.css">
+        <link rel="stylesheet" type="text/css" href="whole.css">
 
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RT16D59X5"></script>
@@ -31,20 +31,20 @@
         <li> <a href="https://drive.google.com/drive/folders/1m_Ma_CZJLFtpY4ZHEbsCqQ4-bh1G2SvM">Module 7</a></li>
     </ul>   -->
     <div>
-        <a href="https://drive.google.com/drive/folders/1DDLcnG2bgaFPdxdWXKUlG8zouhNHZMh9?usp=drive_link" ><img src="Screenshot 2025-06-19 193209.png" class="bookie"></a>
+        <a href="https://drive.google.com/drive/folders/1DDLcnG2bgaFPdxdWXKUlG8zouhNHZMh9?usp=drive_link" ><img src="osmod1.png" class="bookie"></a>
         <br>
-        <a href="https://drive.google.com/drive/folders/1IpiPfa7JTScZGTAvUJWJCZB4OM5P4Xcp?usp=drive_link" ><img src="Screenshot 2025-06-19 193216.png" class="bookie"></a>
-        <br><a href="https://drive.google.com/drive/folders/1xEBfZaLDyab0iho0y7gYB8LqNOKmx_0f?usp=drive_link" ><img src="Screenshot 2025-06-19 193227.png" class="bookie"></a>
-        <br><a href="https://drive.google.com/drive/folders/1D-eKVP4Sxqoxn8PW14qFy7LB7pYRUH2i?usp=drive_link" ><img src="Screenshot 2025-06-19 193238.png" class="bookie"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1wnPbrfN0cAzsQuOU6tUgS_Qe6wps-lPu?usp=drive_link" ><img src="Screenshot 2025-06-19 193246.png" class="bookie"></a>
-       <br> <a href="https://drive.google.com/drive/folders/19t1mWu_ZI2qoH0llF3KEIhX6vm_ggROL?usp=drive_link" ><img src="Screenshot 2025-06-19 193254.png" class="bookie"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1Og3-HjLkPRLZyZBaLt-ATbltASSJAT4K?usp=drive_link" ><img src="Screenshot 2025-06-19 223530.png" class="bookie"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1ol60RA_x_cBlx3Gds-OKkBByQ80Ri8FY?usp=drive_link" ><img src="Screenshot 2025-06-19 225845.png" class="cool"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1UvcL2MxvG-gf-Ahn5g9iaaSdhZG4afbr?usp=drive_link" ><img src="Screenshot 2025-06-19 225859.png" class="cool"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1efoJ99-8SB7-Xx02jtPWdEfYbcr2TBfD?usp=drive_link" ><img src="Screenshot 2025-06-19 225914.png" class="cool"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1iUIeWpNZrzrVvcK9KW_txQb28fMrxgUF?usp=drive_link" ><img src="Screenshot 2025-06-19 225923.png" class="cool"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1CK-bTZQ72nsFjUzANEaEjODywkn47g7W?usp=drive_link" ><img src="Screenshot 2025-06-19 225935.png" class="cool"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1Aidk0RB9TVNCYuYXk6A4JTb_BZp2zPIh?usp=drive_link" ><img src="Screenshot 2025-06-19 225949.png" class="cool"></a>
+        <a href="https://drive.google.com/drive/folders/1IpiPfa7JTScZGTAvUJWJCZB4OM5P4Xcp?usp=drive_link" ><img src="osmod2.png" class="bookie"></a>
+        <br><a href="https://drive.google.com/drive/folders/1xEBfZaLDyab0iho0y7gYB8LqNOKmx_0f?usp=drive_link" ><img src="osmod3.png" class="bookie"></a>
+        <br><a href="https://drive.google.com/drive/folders/1D-eKVP4Sxqoxn8PW14qFy7LB7pYRUH2i?usp=drive_link" ><img src="osmod4.png" class="bookie"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1wnPbrfN0cAzsQuOU6tUgS_Qe6wps-lPu?usp=drive_link" ><img src="osmod5.png" class="bookie"></a>
+       <br> <a href="https://drive.google.com/drive/folders/19t1mWu_ZI2qoH0llF3KEIhX6vm_ggROL?usp=drive_link" ><img src="osmod6.png" class="bookie"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1Og3-HjLkPRLZyZBaLt-ATbltASSJAT4K?usp=drive_link" ><img src="osmod7.png" class="bookie"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1ol60RA_x_cBlx3Gds-OKkBByQ80Ri8FY?usp=drive_link" ><img src="topic wise notes.png" class="cool"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1UvcL2MxvG-gf-Ahn5g9iaaSdhZG4afbr?usp=drive_link" ><img src="system calls.png" class="cool"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1efoJ99-8SB7-Xx02jtPWdEfYbcr2TBfD?usp=drive_link" ><img src="angeneline.png" class="cool"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1iUIeWpNZrzrVvcK9KW_txQb28fMrxgUF?usp=drive_link" ><img src="anadan.png" class="cool"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1CK-bTZQ72nsFjUzANEaEjODywkn47g7W?usp=drive_link" ><img src="revathi.png" class="cool"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1Aidk0RB9TVNCYuYXk6A4JTb_BZp2zPIh?usp=drive_link" ><img src="yogesh.png" class="cool"></a>
     </div>
     <!-- <img src="Screenshot 2025-06-17 020246.png" class="syl"> -->
         <div class="vase">
