--- a/osind.html
+++ b/osind.html
@@ -24,6 +24,8 @@
          <h1><b> BCSE303L                    OS Materials </b></h1>
     
   <nav>
+       <div class="vase">
+            <a href="index.html"> Go Back to Home!</a></div>
       <ul>
         
         <li> <a href="osmod.html">Modules</a></li>
