--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li> <a href="dsind.html">Data Structures and Algorithms</a></li>
         <li> <a href="javaind.html">Java</a></li>
          <li> <a href="mpmcind.html">Microprocessors and Microcontrollers</a></li>
-         <li> <a href="osind.html">Operating Sstems</a></li>
+         <li> <a href="osind.html">Operating Systems</a></li>
          <li> <a href="flind.html">Foreign Language</a></li>
             <li> <a href="stsind.html">Soft Skills</a></li>
      </ul> 
