--- a/dsaind.html
+++ b/dsaind.html
@@ -24,6 +24,8 @@
          <h1><b> BCSE202L                    DSA Materials </b></h1>
     
   <nav>
+      <div class="vase">
+            <a href="index.html"> Go Back to Home!</a></div>
       <ul>
         
         <li> <a href="dsamod.html">Modules</a></li>
