--- a/osmod.html
+++ b/osmod.html
@@ -40,9 +40,9 @@
        <br> <a href="https://drive.google.com/drive/folders/19t1mWu_ZI2qoH0llF3KEIhX6vm_ggROL?usp=drive_link" ><img src="osmod6.png" class="bookie"></a>
        <br> <a href="https://drive.google.com/drive/folders/1Og3-HjLkPRLZyZBaLt-ATbltASSJAT4K?usp=drive_link" ><img src="osmod7.png" class="bookie"></a>
        <br> <a href="https://drive.google.com/drive/folders/1ol60RA_x_cBlx3Gds-OKkBByQ80Ri8FY?usp=drive_link" ><img src="topic wise notes.png" class="cool"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1UvcL2MxvG-gf-Ahn5g9iaaSdhZG4afbr?usp=drive_link" ><img src="system calls.png" class="cool"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1UvcL2MxvG-gf-Ahn5g9iaaSdhZG4afbr?usp=drive_link" ><img src="systems calls.png" class="cool"></a>
        <br> <a href="https://drive.google.com/drive/folders/1efoJ99-8SB7-Xx02jtPWdEfYbcr2TBfD?usp=drive_link" ><img src="angeneline.png" class="cool"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1iUIeWpNZrzrVvcK9KW_txQb28fMrxgUF?usp=drive_link" ><img src="anadan.png" class="cool"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1iUIeWpNZrzrVvcK9KW_txQb28fMrxgUF?usp=drive_link" ><img src="anandan.png" class="cool"></a>
        <br> <a href="https://drive.google.com/drive/folders/1CK-bTZQ72nsFjUzANEaEjODywkn47g7W?usp=drive_link" ><img src="revathi.png" class="cool"></a>
        <br> <a href="https://drive.google.com/drive/folders/1Aidk0RB9TVNCYuYXk6A4JTb_BZp2zPIh?usp=drive_link" ><img src="yogesh.png" class="cool"></a>
     </div>
