--- a/caoind.html
+++ b/caoind.html
@@ -4,7 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>CAO Materials</title>
-        <link rel="stylesheet" type="text/css" href="cao.css">
+        <link rel="stylesheet" type="text/css" href="whole.css">
         <meta name="author" content="Divya Priya RK">
         <meta name="Keywords" content="VIT,University, Chennai, CVLA,ComplexVariables,LinearAlgebra,syllabus, catalogue, koha, library">
         <meta property="og:url" content="https://cvlamaterials.in/">
@@ -37,14 +37,14 @@
 </nav>
 <br>
         <br>
-        <img src="Screenshot 2025-06-19 231009.png" class="course">
+        <img src="cao obj out.png" class="course">
 <br>
 <br>
 <h2>Recommended Books</h2>
 <div >
-    <a href="https://www.scribd.com/document/606652832/Modul-Suplemen-1-Pengenalan-Daskom"><img src="Screenshot 2025-06-19 232124.png" class="book-img"/></a>
-    <a href="https://theswissbay.ch/pdf/Gentoomen%20Library/Computer%20Architecture/Computer_Organization_5th_Edition.pdf"><img src="download (2).jpeg" class="book-img"/></a>
-    <a href="https://bcrti.co.in/digitallibrary/includeFolder/noticeFolder/21102611512388.pdf"><img src="download.jpeg" class="book-img"/></a>
+    <a href="https://www.scribd.com/document/606652832/Modul-Suplemen-1-Pengenalan-Daskom"><img src="cao book1.png" class="book-img"/></a>
+    <a href="https://theswissbay.ch/pdf/Gentoomen%20Library/Computer%20Architecture/Computer_Organization_5th_Edition.pdf"><img src="cao book2.jpeg" class="book-img"/></a>
+    <a href="https://bcrti.co.in/digitallibrary/includeFolder/noticeFolder/21102611512388.pdf"><img src="cao book3.jpeg" class="book-img"/></a>
    </div>
 <h3>Check Books Availability in VIT Library</h3>
 <div class="cat"><a href="https://webopaccc.vit.ac.in/"> VIT Library Catalogue</a></div>
