--- a/caomod.html
+++ b/caomod.html
@@ -4,7 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>CAO Materials</title>
-        <link rel="stylesheet" type="text/css" href="dupin.css">
+        <link rel="stylesheet" type="text/css" href="whole.css">
 
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RT16D59X5"></script>
@@ -30,21 +30,21 @@
         <li> <a href="https://drive.google.com/drive/folders/1m_Ma_CZJLFtpY4ZHEbsCqQ4-bh1G2SvM">Module 7</a></li>
     </ul>   -->
     <div>
-        <a href="https://drive.google.com/drive/folders/1F4HeP6TwFHqGjwr46C6hhzRWvUlxEpOX?usp=drive_link" ><img src="Screenshot 2025-06-19 231044.png" class="bookie"></a>
+        <a href="https://drive.google.com/drive/folders/1F4HeP6TwFHqGjwr46C6hhzRWvUlxEpOX?usp=drive_link" ><img src="caomod1.png" class="bookie"></a>
         <br>
-        <a href="https://drive.google.com/drive/folders/1FWt-eH3FEBdxRNzVX3AVWGOFvhmnH-nQ?usp=drive_link" ><img src="Screenshot 2025-06-19 231105.png" class="bookie"></a>
+        <a href="https://drive.google.com/drive/folders/1FWt-eH3FEBdxRNzVX3AVWGOFvhmnH-nQ?usp=drive_link" ><img src="caomod2.png" class="bookie"></a>
         <br>
-        <a href="https://drive.google.com/drive/folders/1KUTMusoVke7bXzielgAd1g59okZjMQXJ?usp=drive_link" ><img src="Screenshot 2025-06-19 231116.png" class="bookie"></a>
+        <a href="https://drive.google.com/drive/folders/1KUTMusoVke7bXzielgAd1g59okZjMQXJ?usp=drive_link" ><img src="caomod3.png" class="bookie"></a>
         <br>
-        <a href="https://drive.google.com/drive/folders/1DCNnXuU7Fv3pHJC7VhZOdFdLL8e3wIHl?usp=drive_link" ><img src="Screenshot 2025-06-19 231124.png" class="bookie"></a>
+        <a href="https://drive.google.com/drive/folders/1DCNnXuU7Fv3pHJC7VhZOdFdLL8e3wIHl?usp=drive_link" ><img src="caomod4.png" class="bookie"></a>
         <br>
-        <a href="https://drive.google.com/drive/folders/1WYvEeH-euaqBDllSimsirQ9unx6jGW47?usp=drive_link" ><img src="Screenshot 2025-06-19 231124.png" class="bookie"></a>
+        <a href="https://drive.google.com/drive/folders/1WYvEeH-euaqBDllSimsirQ9unx6jGW47?usp=drive_link" ><img src="caomod5.png" class="bookie"></a>
         <br>
-        <a href="https://drive.google.com/drive/folders/1JA7vcvgr-gxVoEiH26bVJgqfOk0r8JCW?usp=drive_link" ><img src="Screenshot 2025-06-19 231143.png" class="bookie"></a>
+        <a href="https://drive.google.com/drive/folders/1JA7vcvgr-gxVoEiH26bVJgqfOk0r8JCW?usp=drive_link" ><img src="caomod6.png" class="bookie"></a>
         <br>
-        <a href="https://drive.google.com/drive/folders/1qKl8KR-GEYZxwGn05RpY9rRaoUJUxRoK?usp=drive_link" ><img src="Screenshot 2025-06-19 231151.png" class="bookie"></a>
+        <a href="https://drive.google.com/drive/folders/1qKl8KR-GEYZxwGn05RpY9rRaoUJUxRoK?usp=drive_link" ><img src="caomod7.png" class="bookie"></a>
         <br>
-        <a href="https://drive.google.com/drive/folders/12hwXCcJuP1k4fInqx9trNkhuI64sUwxv?usp=drive_link" ><img src="Screenshot 2025-06-19 233745.png" class="cool"></a>
+        <a href="https://drive.google.com/drive/folders/12hwXCcJuP1k4fInqx9trNkhuI64sUwxv?usp=drive_link" ><img src="illavarsi.png" class="cool"></a>
     </div>
     <!-- <img src="Screenshot 2025-06-17 020246.png" class="syl"> -->
         <div class="vase">
