--- a/caoind.html
+++ b/caoind.html
@@ -43,9 +43,9 @@
 <br>
 <h2>Recommended Books</h2>
 <div >
-    <a href="https://www.scribd.com/document/606652832/Modul-Suplemen-1-Pengenalan-Daskom"><img src="cao book1.png" class="book-img"/></a>
-    <a href="https://theswissbay.ch/pdf/Gentoomen%20Library/Computer%20Architecture/Computer_Organization_5th_Edition.pdf"><img src="cao book2.jpeg" class="book-img"/></a>
-    <a href="https://bcrti.co.in/digitallibrary/includeFolder/noticeFolder/21102611512388.pdf"><img src="cao book3.jpeg" class="book-img"/></a>
+    <a href="https://www.scribd.com/document/606652832/Modul-Suplemen-1-Pengenalan-Daskom"><img src="Screenshot 2025-06-19 232124.png" class="book-img"/></a>
+    <a href="https://theswissbay.ch/pdf/Gentoomen%20Library/Computer%20Architecture/Computer_Organization_5th_Edition.pdf"><img src="cao book1.jpeg" class="book-img"/></a>
+    <a href="https://bcrti.co.in/digitallibrary/includeFolder/noticeFolder/21102611512388.pdf"><img src="cao book2.jpeg" class="book-img"/></a>
    </div>
 <h3>Check Books Availability in VIT Library</h3>
 <div class="cat"><a href="https://webopaccc.vit.ac.in/"> VIT Library Catalogue</a></div>
