--- a/cvlamod.html
+++ b/cvlamod.html
@@ -4,7 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>CVLA Materials</title>
-        <link rel="stylesheet" type="text/css" href="dupin.css">
+        <link rel="stylesheet" type="text/css" href="whole.css">
 
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RT16D59X5"></script>
@@ -30,14 +30,14 @@
         <li> <a href="https://drive.google.com/drive/folders/1m_Ma_CZJLFtpY4ZHEbsCqQ4-bh1G2SvM">Module 7</a></li>
     </ul>   -->
     <div>
-        <a href="https://drive.google.com/drive/folders/1XoWloGbQjGum9hqeQpSnSRQTbua_fRAH" ><img src="Screenshot 2025-06-17 020556.png" class="bookie"></a>
+        <a href="https://drive.google.com/drive/folders/1XoWloGbQjGum9hqeQpSnSRQTbua_fRAH" ><img src="cvla mod1.png" class="bookie"></a>
         <br>
-        <a href="https://drive.google.com/drive/folders/1P6Vxt9Z3LN-mvHoPia0reCMe_W51nmaV" ><img src="Screenshot 2025-06-17 021028.png" class="bookie"></a>
-        <br><a href="https://drive.google.com/drive/folders/18xt0Yh6wK9EgSvjuoZkr_3L7JWFlKsTe" ><img src="Screenshot 2025-06-17 021044.png" class="bookie"></a>
-        <br><a href="https://drive.google.com/drive/folders/1XJHf3sqOa0solYnUCFPm8bcyILwfixi-" ><img src="Screenshot 2025-06-17 021117.png" class="bookie"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1bhZQ6pCAJXk8iBy3LILwUbDd3cnwoLg2" ><img src="Screenshot 2025-06-17 021211.png" class="bookie"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1i29ga-fkfPpOcRJoxuULPwFmufsTBEEo" ><img src="Screenshot 2025-06-17 021222.png" class="bookie"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1m_Ma_CZJLFtpY4ZHEbsCqQ4-bh1G2SvM" ><img src="Screenshot 2025-06-17 021233.png" class="bookie"></a>
+        <a href="https://drive.google.com/drive/folders/1P6Vxt9Z3LN-mvHoPia0reCMe_W51nmaV" ><img src="cvla mod2.png" class="bookie"></a>
+        <br><a href="https://drive.google.com/drive/folders/18xt0Yh6wK9EgSvjuoZkr_3L7JWFlKsTe" ><img src="cvla mod3.png" class="bookie"></a>
+        <br><a href="https://drive.google.com/drive/folders/1XJHf3sqOa0solYnUCFPm8bcyILwfixi-" ><img src="cvla mod4.png" class="bookie"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1bhZQ6pCAJXk8iBy3LILwUbDd3cnwoLg2" ><img src="cvla mod5.png" class="bookie"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1i29ga-fkfPpOcRJoxuULPwFmufsTBEEo" ><img src="cvla mod6.png" class="bookie"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1m_Ma_CZJLFtpY4ZHEbsCqQ4-bh1G2SvM" ><img src="cvla mod7.png" class="bookie"></a>
     </div>
     <!-- <img src="Screenshot 2025-06-17 020246.png" class="syl"> -->
         <div class="vase">
