--- a/dsaind.html
+++ b/dsaind.html
@@ -4,7 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>DSA Materials</title>
-        <link rel="stylesheet" type="text/css" href="dsa.css">
+        <link rel="stylesheet" type="text/css" href="whole.css">
         <meta name="author" content="Divya Priya RK">
         <meta name="Keywords" content="VIT,University, Chennai, CVLA,ComplexVariables,LinearAlgebra,syllabus, catalogue, koha, library">
         <meta property="og:url" content="https://cvlamaterials.in/">
@@ -33,19 +33,20 @@
         <li> <a href="https://drive.google.com/drive/folders/1ZoGBKG-5QCFmJnLztlEWxqKn5o_0dDc6?usp=drive_link">Reference Books</a></li>
         <li> <a href="https://drive.google.com/file/d/1MQWD2WHCnwR-P62XSDXqfkOd3HK2dWYt/view?usp=drive_link">Question Papers</a></li>
      </ul> 
-
+ <div class="vase">
+            <a href="index.html"> Go Back to Home!</a></div>
 </nav>
 <br>
         <br>
-        <img src="Screenshot 2025-06-19 190031.png" class="course">
+        <img src="dsaobjout.png" class="course">
 <br>
 <br>
 <h2>Recommended Books</h2>
 <div >
-    <a href="https://www.uoitc.edu.iq/images/documents/informatics-institute/Competitive_exam/DataStructures.pdf"><img src="download.jpeg" class="book-img"/></a>
-    <a href="https://users.dcc.uchile.cl/~voyanede/cc4102/dS%26A%20Book%20By%20Alfred%20-Aho.pdf"><img src="download (1).jpeg" class="book-img"/></a>
-    <a href="https://mrce.in/ebooks/Fundamentals-of-Data-Structures-in-C-Ellis-Horowitz-Sartaj-Sahni-etc.-.pdf"><img src="download (2).jpeg" class="book-img"/></a>
-    <a href="https://wp.kntu.ac.ir/dfard/ebook/em/Greenberg%20-%20Advanced%20Engineering%20Mathematics_abstract.pdf"><img src="download (3).jpeg" class="book-img"/></a>
+    <a href="https://www.uoitc.edu.iq/images/documents/informatics-institute/Competitive_exam/DataStructures.pdf"><img src="dsa book1.jpeg" class="book-img"/></a>
+    <a href="https://users.dcc.uchile.cl/~voyanede/cc4102/dS%26A%20Book%20By%20Alfred%20-Aho.pdf"><img src="dsa book2.jpeg" class="book-img"/></a>
+    <a href="https://mrce.in/ebooks/Fundamentals-of-Data-Structures-in-C-Ellis-Horowitz-Sartaj-Sahni-etc.-.pdf"><img src="dsa book3.jpeg" class="book-img"/></a>
+    <a href="https://wp.kntu.ac.ir/dfard/ebook/em/Greenberg%20-%20Advanced%20Engineering%20Mathematics_abstract.pdf"><img src="dsa book4.jpeg" class="book-img"/></a>
     </div>
     <br>
 <h3>Check Books Availability in VIT Library</h3>
