--- a/dsamod.html
+++ b/dsamod.html
@@ -4,7 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>CVLA Materials</title>
-        <link rel="stylesheet" type="text/css" href="dsa.css">
+        <link rel="stylesheet" type="text/css" href="whole.css">
 
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RT16D59X5"></script>
@@ -30,17 +30,17 @@
         <li> <a href="https://drive.google.com/drive/folders/1m_Ma_CZJLFtpY4ZHEbsCqQ4-bh1G2SvM">Module 7</a></li>
     </ul>   -->
     <div>
-        <a href="https://drive.google.com/drive/folders/1dCG7wVzowkLob9jCc2VLWK-E8d_Ny8-k?usp=drive_link" ><img src="Screenshot 2025-06-19 190041.png" class="bookie"></a>
+        <a href="https://drive.google.com/drive/folders/1dCG7wVzowkLob9jCc2VLWK-E8d_Ny8-k?usp=drive_link" ><img src="dsamod1.png" class="bookie"></a>
         <br>
-        <a href="https://drive.google.com/drive/folders/1WUN0M50i4i6w-xvpgwgikWffkGRHJBGq?usp=drive_link" ><img src="Screenshot 2025-06-19 190048.png" class="bookie"></a>
-        <br><a href="https://drive.google.com/drive/folders/16Z67SSIDwBQZywcGGx7Sud4pUg3YqSSt?usp=drive_link" ><img src="Screenshot 2025-06-19 190058.png" class="bookie"></a>
-        <br><a href="https://drive.google.com/drive/folders/1Qp4pDPgYTe_2RerwDbKNQxADEE6sJYq9?usp=drive_link" ><img src="Screenshot 2025-06-19 190109.png" class="bookie"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1ADSI8f8HfgE6XZ5pZrZEJK-NSUDe00KJ?usp=drive_link" ><img src="Screenshot 2025-06-19 190119.png" class="bookie"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1L9_NkC5uUotw0ypO7n38zXFl74V2R3US?usp=drive_link" ><img src="Screenshot 2025-06-19 190126.png" class="bookie"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1RsffoVToUvYMCirvYtjtXAm_mI2NF7TJ?usp=drive_link" ><img src="Screenshot 2025-06-19 190136.png" class="bookie"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1_NFBIHztnmBSIf27mxx1DNPeNGldtgI3?usp=drive_link" ><img src="Screenshot 2025-06-19 192108.png" class="bookie"></a>
-    <br> <a href="https://drive.google.com/drive/folders/17HLcLO-Xo6bHzuXAHpHN3Gbd3co5y2uj?usp=drive_link" ><img src="Screenshot 2025-06-19 192248.png" class="bookie"></a>
-    <br> <a href="https://drive.google.com/drive/folders/1DJOafOP7RQw65Ns7BohxVenD_rfx0qJ8?usp=drive_link" ><img src="Screenshot 2025-06-19 192346.png" class="bookie"></a>
+        <a href="https://drive.google.com/drive/folders/1WUN0M50i4i6w-xvpgwgikWffkGRHJBGq?usp=drive_link" ><img src="dsamod2.png" class="bookie"></a>
+        <br><a href="https://drive.google.com/drive/folders/16Z67SSIDwBQZywcGGx7Sud4pUg3YqSSt?usp=drive_link" ><img src="dsamod3.png" class="bookie"></a>
+        <br><a href="https://drive.google.com/drive/folders/1Qp4pDPgYTe_2RerwDbKNQxADEE6sJYq9?usp=drive_link" ><img src="dsamod4.png" class="bookie"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1ADSI8f8HfgE6XZ5pZrZEJK-NSUDe00KJ?usp=drive_link" ><img src="dsamod5.png" class="bookie"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1L9_NkC5uUotw0ypO7n38zXFl74V2R3US?usp=drive_link" ><img src="dsamod6.png" class="bookie"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1RsffoVToUvYMCirvYtjtXAm_mI2NF7TJ?usp=drive_link" ><img src="dsamod7.png" class="bookie"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1_NFBIHztnmBSIf27mxx1DNPeNGldtgI3?usp=drive_link" ><img src="topic wise notes.png" class="bookie"></a>
+    <br> <a href="https://drive.google.com/drive/folders/17HLcLO-Xo6bHzuXAHpHN3Gbd3co5y2uj?usp=drive_link" ><img src="senthil kumar sir.png" class="bookie"></a>
+    <br> <a href="https://drive.google.com/drive/folders/1DJOafOP7RQw65Ns7BohxVenD_rfx0qJ8?usp=drive_link" ><img src="vetrivelan.png" class="bookie"></a>
     
     </div>
     <!-- <img src="Screenshot 2025-06-17 020246.png" class="syl"> -->
