--- a/javaind.html
+++ b/javaind.html
@@ -4,7 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>JAVA Materials</title>
-        <link rel="stylesheet" type="text/css" href="java.css">
+        <link rel="stylesheet" type="text/css" href="whole.css">
         <meta name="author" content="Divya Priya RK">
         <meta name="Keywords" content="VIT,University, Chennai, CVLA,ComplexVariables,LinearAlgebra,syllabus, catalogue, koha, library">
         <meta property="og:url" content="https://cvlamaterials.in/">
