--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
         <li> <a href="caoind.html">Computer Architecture and Organization</a></li>
         <li> <a href="cvlaind.html">Complex Variables and Linear Algebra</a></li>
-        <li> <a href="dsind.html">Data Structures and Algorithms</a></li>
+        <li> <a href="dsaind.html">Data Structures and Algorithms</a></li>
         <li> <a href="javaind.html">Java</a></li>
          <li> <a href="mpmcind.html">Microprocessors and Microcontrollers</a></li>
          <li> <a href="osind.html">Operating Systems</a></li>
