--- a/dsamod.html
+++ b/dsamod.html
@@ -38,9 +38,9 @@
        <br> <a href="https://drive.google.com/drive/folders/1ADSI8f8HfgE6XZ5pZrZEJK-NSUDe00KJ?usp=drive_link" ><img src="dsamod5.png" class="bookie"></a>
        <br> <a href="https://drive.google.com/drive/folders/1L9_NkC5uUotw0ypO7n38zXFl74V2R3US?usp=drive_link" ><img src="dsamod6.png" class="bookie"></a>
        <br> <a href="https://drive.google.com/drive/folders/1RsffoVToUvYMCirvYtjtXAm_mI2NF7TJ?usp=drive_link" ><img src="dsamod7.png" class="bookie"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1_NFBIHztnmBSIf27mxx1DNPeNGldtgI3?usp=drive_link" ><img src="topic wise notes.png" class="bookie"></a>
-    <br> <a href="https://drive.google.com/drive/folders/17HLcLO-Xo6bHzuXAHpHN3Gbd3co5y2uj?usp=drive_link" ><img src="senthil kumar sir.png" class="bookie"></a>
-    <br> <a href="https://drive.google.com/drive/folders/1DJOafOP7RQw65Ns7BohxVenD_rfx0qJ8?usp=drive_link" ><img src="vetrivelan.png" class="bookie"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1_NFBIHztnmBSIf27mxx1DNPeNGldtgI3?usp=drive_link" ><img src="topic wise notes.png" class="cool"></a>
+    <br> <a href="https://drive.google.com/drive/folders/17HLcLO-Xo6bHzuXAHpHN3Gbd3co5y2uj?usp=drive_link" ><img src="senthil kumar sir.png" class="cool"></a>
+    <br> <a href="https://drive.google.com/drive/folders/1DJOafOP7RQw65Ns7BohxVenD_rfx0qJ8?usp=drive_link" ><img src="vetrivelan.png" class="cool"></a>
     
     </div>
     <!-- <img src="Screenshot 2025-06-17 020246.png" class="syl"> -->
