--- a/javaind.html
+++ b/javaind.html
@@ -34,12 +34,12 @@
 </nav>
 <br>
         <br>
-        <img src="Screenshot 2025-06-19 231458.png" class="course">
+        <img src="java obj out.png" class="course">
 <br>
 <br>
 <h3>Syllabus</h3>
 <img src="Screenshot 2025-06-19 231601.png" class="course">
-<img src="Screenshot 2025-06-19 231616.png" class="course">
+<img src="javapro.png" class="course">
 <br>
 <br>
 <h2>Recommended Books</h2>
