--- a/mpmcind.html
+++ b/mpmcind.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>MPMC Materials</title>
-        <link rel="stylesheet" type="text/css" href="mpmcstyle.css">
+        <link rel="stylesheet" type="text/css" href="whole.css">
     </head>
     <body>
         
@@ -23,19 +23,19 @@
 </nav>
 <br>
 <br>
-<img src="Screenshot 2025-06-17 172844.png" class="course">
+<img src="mpobj.png" class="course">
 <br>
 <br>
-<img src="Screenshot 2025-06-17 172854.png" class="course">
+<img src="mpout.png" class="course">
 <br>
 <br>
 <h2>Recommended Books</h2>
 <div >
-    <a href="https://ggnindia.dronacharya.info/Downloads/Sub-info/RelatedBook/5thSem/MICROPROCESSOR-AND-INTERFACING-TEXT-BOOK-2.pdf"><img src="download.jpeg" class="book-img"/></a>
-    <a href="https://ee.iust.ac.ir/files/ee/pages/az/mazidi.pdf"><img src="download (1).jpeg" class="book-img"/></a>
-    <a href="https://archive.org/details/armassemblylangu0000muha"><img src="download (2).jpeg" class="book-img"/></a>
-    <a href="https://sist.sathyabama.ac.in/sist_coursematerial/uploads/SEC1201.pdf"><img src="download (3).jpeg" class="book-img"/></a>
-    <a href="https://picture.iczhiku.com/resource/eetop/WhKslAOwiKdSfxVX.pdf"><img src="download (4).jpeg" class="book-img"/></a>
+    <a href="https://ggnindia.dronacharya.info/Downloads/Sub-info/RelatedBook/5thSem/MICROPROCESSOR-AND-INTERFACING-TEXT-BOOK-2.pdf"><img src="mpbook5.jpeg" class="book-img"/></a>
+    <a href="https://ee.iust.ac.ir/files/ee/pages/az/mazidi.pdf"><img src="mpbook1.jpeg" class="book-img"/></a>
+    <a href="https://archive.org/details/armassemblylangu0000muha"><img src="mpbook2.jpeg" class="book-img"/></a>
+    <a href="https://sist.sathyabama.ac.in/sist_coursematerial/uploads/SEC1201.pdf"><img src="mpbook3.jpeg" class="book-img"/></a>
+    <a href="https://picture.iczhiku.com/resource/eetop/WhKslAOwiKdSfxVX.pdf"><img src="mpbook4.jpeg" class="book-img"/></a>
 </div>
 <br>
 <h3>Check Books Availability in VIT Library</h3>
