--- a/mpmcmod.html
+++ b/mpmcmod.html
@@ -4,7 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>MPMC Materials</title>
-        <link rel="stylesheet" type="text/css" href="mpmcstyle.css">
+        <link rel="stylesheet" type="text/css" href="whole.css">
     </head>
     <body>
         <h2><b>Modules</b></h2>
@@ -20,14 +20,14 @@
         <li> <a href="https://drive.google.com/drive/folders/1m_Ma_CZJLFtpY4ZHEbsCqQ4-bh1G2SvM">Module 7</a></li>
     </ul>   -->
     <div>
-        <a href="https://drive.google.com/drive/folders/1UZHFGeyr94RHA3nSSlBuHvnbnMcOgXgx?usp=drive_link" ><img src="Screenshot 2025-06-17 172904.png" class="bookie"></a>
+        <a href="https://drive.google.com/drive/folders/1UZHFGeyr94RHA3nSSlBuHvnbnMcOgXgx?usp=drive_link" ><img src="mpmod1.png" class="bookie"></a>
         <br>
-        <a href="https://drive.google.com/drive/folders/14n0Q0MwQbl7jTrDBD37uuGOgAHDqkAVf?usp=drive_link" ><img src="Screenshot 2025-06-17 172912.png" class="bookie"></a>
-        <br><a href="https://drive.google.com/drive/folders/17cVZa_cBY4t0-OwS-XZaoG-gbe-Kuh3J?usp=drive_link" ><img src="Screenshot 2025-06-17 172922.png" class="bookie"></a>
-        <br><a href="https://drive.google.com/drive/folders/1S0sCtvjx9C_M0y4geeKgqKhDkjhuUhta?usp=drive_link" ><img src="Screenshot 2025-06-17 172931.png" class="bookie"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1k5dx_XAQXyeoU2_td_q8AkZ81IM4nQb7?usp=drive_link" ><img src="Screenshot 2025-06-17 172939.png" class="bookie"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1yoEKNMcB1B5cwRp8JiS3aJTl7r8ojulI?usp=drive_link" ><img src="Screenshot 2025-06-17 173005.png" class="bookie"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1yoEKNMcB1B5cwRp8JiS3aJTl7r8ojulI?usp=drive_link" ><img src="Screenshot 2025-06-17 173011.png" class="bookie"></a>
+        <a href="https://drive.google.com/drive/folders/14n0Q0MwQbl7jTrDBD37uuGOgAHDqkAVf?usp=drive_link" ><img src="mpmod2.png" class="bookie"></a>
+        <br><a href="https://drive.google.com/drive/folders/17cVZa_cBY4t0-OwS-XZaoG-gbe-Kuh3J?usp=drive_link" ><img src="mpmod3.png" class="bookie"></a>
+        <br><a href="https://drive.google.com/drive/folders/1S0sCtvjx9C_M0y4geeKgqKhDkjhuUhta?usp=drive_link" ><img src="mpmod4.png" class="bookie"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1k5dx_XAQXyeoU2_td_q8AkZ81IM4nQb7?usp=drive_link" ><img src="mpmod5.png" class="bookie"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1yoEKNMcB1B5cwRp8JiS3aJTl7r8ojulI?usp=drive_link" ><img src="mpmod6.png" class="bookie"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1yoEKNMcB1B5cwRp8JiS3aJTl7r8ojulI?usp=drive_link" ><img src="mpmod7.png" class="bookie"></a>
     </div>
     <!-- <img src="Screenshot 2025-06-17 020246.png" class="syl"> -->
         <div class="vase">
