--- a/mpmcind.html
+++ b/mpmcind.html
@@ -14,7 +14,7 @@
   <nav>
       <ul>
         
-        <li> <a href="modsmpmc.html">Modules</a></li>
+        <li> <a href="mpmcmod.html">Modules</a></li>
         <li> <a href="https://drive.google.com/file/d/1CdOvVE7hQKgxxCQNADVEH2ymFOw5eWvl/view?usp=drive_link">Syllabus</a></li>
         <li> <a href="https://drive.google.com/file/d/1S73FIvPJk-_Ucv_i56xEqDA8UBtltrzs/view?usp=drive_link">Question Papers</a></li>
         
