--- a/mpmcind.html
+++ b/mpmcind.html
@@ -19,7 +19,7 @@
         <li> <a href="https://drive.google.com/file/d/1S73FIvPJk-_Ucv_i56xEqDA8UBtltrzs/view?usp=drive_link">Question Papers</a></li>
         
      </ul> 
- <div class="vase">
+  <div class="cool">
             <a href="index.html"> Go Back to Home!</a></div>
 </nav>
 <br>
