--- a/cvlaind.html
+++ b/cvlaind.html
@@ -34,7 +34,7 @@
         <li> <a href="https://drive.google.com/file/d/1CN0MWnBVqetBzjSCqu6YkI53axVee-z9/view?usp=drive_link">Recommended By Seniors</a></li>
       
      </ul> 
-       <div class="vase">
+       <div class="cool">
             <a href="index.html"> Go Back to Home!</a></div>
 
 </nav>
