--- a/caoind.html
+++ b/caoind.html
@@ -33,8 +33,7 @@
         <li> <a href="https://drive.google.com/drive/folders/1azpPpemm0vV88SsacsCeObG4TqmdjqCb?usp=drive_link">Practice Questions</a></li>
       <li> <a href="https://drive.google.com/drive/folders/1PtvCxZJFgyxrF5sItfc1ZcTEZ-bDOitE?usp=drive_link">Projects</a></li>
      </ul> 
- <div class="cool">
-            <a href="index.html"> Go Back to Home!</a></div>
+ 
 </nav>
 <br>
         <br>
@@ -49,5 +48,7 @@
    </div>
 <h3>Check Books Availability in VIT Library</h3>
 <div class="cat"><a href="https://webopaccc.vit.ac.in/"> VIT Library Catalogue</a></div>
+        <nav>        <div class="cool">
+            <a href="index.html"> Go Back to Home!</a></div></nav>
 </body>
 </html>
