--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
-        <title><img src="WhatsApp Image 2024-05-18 at 14.14.20_9840a5d0.jpg">3rd Semester</title>
+        <title>3rd Semester</title>
         <link rel="stylesheet" type="text/css" href="whole.css">
         <meta name="author" content="Divya Priya RK">
         <meta name="Keywords" content="VIT,University, Chennai, CVLA,ComplexVariables,LinearAlgebra,syllabus, catalogue, koha, library">
