--- a/caoind.html
+++ b/caoind.html
@@ -50,7 +50,7 @@
    </div>
 <h3>Check Books Availability in VIT Library</h3>
 <div class="cat"><a href="https://webopaccc.vit.ac.in/"> VIT Library Catalogue</a></div>
-        <nav>        <div class="cool">
+        <nav>        <div class="vase">
             <a href="index.html"> Go Back to Home!</a></div></nav>
 </body>
 </html>
