--- a/cvlaind.html
+++ b/cvlaind.html
@@ -10,6 +10,8 @@
         <meta name="Keywords" content="VIT,University, Chennai, CVLA,ComplexVariables,LinearAlgebra,syllabus, catalogue, koha, library">
         <meta property="og:url" content="https://cvlamaterials.in/">
         <meta property="og:image" content="Screenshot 2025-06-17 015417.png">
+        <link rel="icon" href="favicon.png" type="image/png">
+
     
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RT16D59X5"></script>
