--- a/dsaind.html
+++ b/dsaind.html
@@ -9,6 +9,8 @@
         <meta name="Keywords" content="VIT,University, Chennai, CVLA,ComplexVariables,LinearAlgebra,syllabus, catalogue, koha, library">
         <meta property="og:url" content="https://cvlamaterials.in/">
         <meta property="og:image" content="Screenshot 2025-06-17 015417.png">
+        <link rel="icon" href="favicon.png" type="image/png">
+
     
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RT16D59X5"></script>
@@ -33,7 +35,7 @@
         <li> <a href="https://drive.google.com/drive/folders/1ZoGBKG-5QCFmJnLztlEWxqKn5o_0dDc6?usp=drive_link">Reference Books</a></li>
         <li> <a href="https://drive.google.com/file/d/1MQWD2WHCnwR-P62XSDXqfkOd3HK2dWYt/view?usp=drive_link">Question Papers</a></li>
      </ul> 
- <div class="cool">
+ <div class="vase">
             <a href="index.html"> Go Back to Home!</a></div>
 </nav>
 <br>
