--- a/mpmcind.html
+++ b/mpmcind.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>MPMC Materials</title>
         <link rel="stylesheet" type="text/css" href="whole.css">
+        <link rel="icon" href="favicon.png" type="image/png">
+
     </head>
     <body>
         
@@ -19,7 +21,7 @@
         <li> <a href="https://drive.google.com/file/d/1S73FIvPJk-_Ucv_i56xEqDA8UBtltrzs/view?usp=drive_link">Question Papers</a></li>
         
      </ul> 
-  <div class="cool">
+  <div class="vase">
             <a href="index.html"> Go Back to Home!</a></div>
 </nav>
 <br>
