--- a/mpmcmod.html
+++ b/mpmcmod.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>MPMC Materials</title>
         <link rel="stylesheet" type="text/css" href="whole.css">
+        <link rel="icon" href="favicon.png" type="image/png">
+
     </head>
     <body>
         <h2><b>Modules</b></h2>
