--- a/osmod.html
+++ b/osmod.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>OS Materials</title>
         <link rel="stylesheet" type="text/css" href="whole.css">
+        <link rel="icon" href="favicon.png" type="image/png">
+
 
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RT16D59X5"></script>
