--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
 <html>
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE-edge">
-        <meta name="viewport" content="width=device-width initial-scale=1.0">
-        <title>3rd Semester</title>
-        <link rel="stylesheet" type="text/css" href="whole.css">
-        <meta name="author" content="Divya Priya RK">
-        <meta name="Keywords" content="VIT,University, Chennai, CVLA,ComplexVariables,LinearAlgebra,syllabus, catalogue, koha, library">
-        <meta property="og:url" content="https://cvlamaterials.in/">
-        <meta property="og:image" content="Screenshot 2025-06-17 015417.png">
-    <link rel="icon" href="favicon.png" type="image/png">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>3rd Semester Materials | Divya Priya</title>
 
+  <link rel="stylesheet" type="text/css" href="whole.css">
+  <link rel="icon" href="favicon.png" type="image/png">
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6RT16D59X5"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <meta name="author" content="Divya Priya RK">
+  <meta name="description" content="Free and curated 3rd semester notes and materials for Computer Science & Engineering students at VIT Chennai. Download PDFs, syllabus, and more.">
+  <meta name="keywords" content="VIT, VIT Chennai, CVLA, Complex Variables, Computer Architecture and organization, JAVA, Coding, Microprocessors and Microcontrollers, data structures and algorithms, operating systems,OS, notes, modules, recommended books, java online compiler, University, Linear Algebra, syllabus, library, engineering notes, DBMS, DSA, CAO, CSE, study materials, Divya Priya">
+  <meta name="robots" content="index, follow">
 
-  gtag('config', 'G-6RT16D59X5');
-</script>
+  <meta property="og:title" content="3rd Semester CSE Notes | Divya Priya">
+  <meta property="og:description" content="Explore 3rd semester materials and notes for Computer Science students at VIT. Free downloads available.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://cvlamaterials.in/">
+  <meta property="og:image" content="Screenshot%202025-06-17%20015417.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="3rd Semester CSE Notes | Divya Priya">
+  <meta name="twitter:description" content="Explore 3rd semester materials and notes for Computer Science students at VIT. Free downloads available.">
+  <meta name="twitter:image" content="Screenshot%202025-06-17%20015417.png">
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RT16D59X5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-6RT16D59X5');
+  </script>
+
     </head>
     <body>
          <h1><b> 3rd SEMESTER MATERIALS </b></h1>
