--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <meta name="author" content="Divya Priya RK">
   <meta name="description" content="Free and curated 3rd semester notes and materials for Computer Science & Engineering students at VIT Chennai. Download PDFs, syllabus, and more.">
-  <meta name="keywords" content="VIT, VIT Chennai, CVLA, Complex Variables, Computer Architecture and organization, JAVA, Coding, Microprocessors and Microcontrollers, data structures and algorithms, operating systems,OS, notes, modules, recommended books, java online compiler, University, Linear Algebra, syllabus, library, engineering notes, DBMS, DSA, CAO, CSE, study materials, Divya Priya">
+  <meta name="keywords" content="VIT, VIT Chennai, sem3, semester 3, 3rd semester, notes, pdfs, slides, ppts, CVLA, Complex Variables, Computer Architecture and organization, JAVA, Coding, Microprocessors and Microcontrollers, data structures and algorithms, operating systems,OS, notes, modules, recommended books, java online compiler, University, Linear Algebra, syllabus, library, engineering notes, DBMS, DSA, CAO, CSE, study materials, Divya Priya">
   <meta name="robots" content="index, follow">
 
   <meta property="og:title" content="3rd Semester CSE Notes | Divya Priya">
