--- a/index.html
+++ b/index.html
@@ -65,5 +65,11 @@
     <br>
 <h3>Check Books Availability in VIT Library</h3>
 <div class="cat"><a href="https://webopaccc.vit.ac.in/"> VIT Library Catalogue</a></div>
+        <br>
+        <footer style="text-align:center; margin-top: 50px;">
+    <p>Visitors:</p>
+    <img src="https://visitor-badge.glitch.me/badge?page_id=divyapriya382006.3rd-Semester" alt="visitor count">
+  </footer>
+
 </body>
 </html>
