--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
 <h3>Check Books Availability in VIT Library</h3>
 <div class="cat"><a href="https://webopaccc.vit.ac.in/"> VIT Library Catalogue</a></div>
         <br>
-        <footer style="text-align:center; margin-top: 50px;">
-    <p>Visitors:</p>
-    <img src="https://visitor-badge.glitch.me/badge?page_id=divyapriya382006.3rd-Semester" alt="visitor count">
-  </footer>
+       
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=20952974&style=0006&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>   
 
 </body>
 </html>
