--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
          <li> <a href="osind.html">Operating Systems</a></li>
          <li> <a href="flind.html">Foreign Language</a></li>
             <li> <a href="stsind.html">Soft Skills</a></li>
+          <li> <a href="stsind.html">Contact Me</a></li>
      </ul> 
 
 </nav>
