--- a/index.html
+++ b/index.html
@@ -39,15 +39,55 @@
   <nav>
       <ul>
         
-        <li> <a href="caoind.html">Computer Architecture and Organization</a></li>
-        <li> <a href="cvlaind.html">Complex Variables and Linear Algebra</a></li>
-        <li> <a href="dsaind.html">Data Structures and Algorithms</a></li>
-        <li> <a href="javaind.html">Java</a></li>
-         <li> <a href="mpmcind.html">Microprocessors and Microcontrollers</a></li>
-         <li> <a href="osind.html">Operating Systems</a></li>
-         <li> <a href="flind.html">Foreign Language</a></li>
-            <li> <a href="stsind.html">Soft Skills</a></li>
-          <li> <a href="stsind.html">Contact Me</a></li>
+       <div class="card-grid">
+
+  <div class="card">
+    <h3><a href="caoind.html">Computer Architecture and Organization</a></h3>
+    <p>COA Notes, syllabus & PYQs</p>
+  </div>
+
+  <div class="card">
+    <h3><a href="cvlaind.html">Complex Variables and Linear Algebra</a></h3>
+    <p>CVLA Notes, syllabus & PYQs</p>
+  </div>
+
+  <div class="card">
+    <h3><a href="dsaind.html">Data Structures and Algorithms</a></h3>
+    <p>DSA PDFs, code, notes, syllabus & PYQs</p>
+  </div>
+
+  <div class="card">
+    <h3><a href="javaind.html">Java</a></h3>
+    <p>OOP concepts, programs, and syllabus</p>
+  </div>
+
+  <div class="card">
+    <h3><a href="mpmcind.html">Microprocessors and Microcontrollers</a></h3>
+    <p>MPMC Notes, syllabus & PYQs</p>
+  </div>
+
+  <div class="card">
+    <h3><a href="osind.html">Operating Systems</a></h3>
+    <p>OS Notes, syllabus,projects & PYQs</p>
+  </div>
+
+  <div class="card">
+    <h3><a href="flind.html">Foreign Language</a></h3>
+    <p>French, Spanish & German Notes & PYQs</p>
+  </div>
+
+  <div class="card">
+    <h3><a href="stsind.html">Soft Skills</a></h3>
+    <p>STS PYQs</p>
+  </div>
+
+  <div class="card">
+    <h3><a href="stsind.html">Contact Me</a></h3>
+    <p>Reach out for collabs, suggestions or help</p>
+  </div>
+
+</div>
+
      </ul> 
 
 </nav>
