--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>3rd Semester Materials | Divya Priya</title>
 
-  <link rel="stylesheet" type="text/css" href="whole.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="icon" href="favicon.png" type="image/png">
 
   <meta name="author" content="Divya Priya RK">
@@ -85,12 +85,10 @@
     <h3><a href="stsind.html">Contact Me</a></h3>
     <p>Reach out for collabs, suggestions or help</p>
   </div>
-
-<br>
 <h3>Check Books Availability in VIT Library</h3>
 <div class="cat"><a href="https://webopaccc.vit.ac.in/"> VIT Library Catalogue</a></div>
-        <br>
- <h3>Visitor Count</h3>      
+<br>
+<h3>Visitor Count</h3>      
 <a href="https://www.hitwebcounter.com" target="_blank">
 <img src="https://hitwebcounter.com/counter/counter.php?page=20953104&style=0006&nbdigits=5&type=ip&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>                                    
 </body>
