--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>3rd Semester Materials | Divya Priya</title>
 
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="whole.css">
   <link rel="icon" href="favicon.png" type="image/png">
 
   <meta name="author" content="Divya Priya RK">
