--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </div>
 
   <div class="card">
-    <h3><a href="stsind.html">Contact Me</a></h3>
+    <h3><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSBnNVZQMxHSCgLwjtShSdNTZRJfTZWPwGXpDswnPNDwRLqkfKqnTDJFkCxwCtBsNCJSNfdB"></a>Contact Me</h3>
     <p>Reach out for collabs, suggestions or help</p>
   </div>
 <h3>Check Books Availability in VIT Library</h3>
