--- a/flind.html
+++ b/flind.html
@@ -13,7 +13,7 @@
   <nav>
        <div class="card-grid">
 
-  <div class="card" style="background-color: rgb(133, 151, 204);>
+  <div class="card" style="background-color: rgb(133, 151, 204);">
     <h3><a href="https://drive.google.com/file/d/17NggF6v438jSZ8EYaROrUY_zjkpeA4Oz/view?usp=drive_link">French</a></h3>
     <p>Notes</p>
   </div>
@@ -23,17 +23,17 @@
     <p>Notes</p>
   </div>
 
-  <div class="card" style="background-color: aquamarine;>
+  <div class="card" style="background-color: aquamarine;">
     <h3><a href="https://drive.google.com/file/d/16lMDb0mIQ0YJp-Qve9O378tXZVqapPuo/view?usp=drive_link">Spanish</a></h3>
     <p>PYQs</p>
   </div>
 
-   <div class="card" style="background-color: rgb(133, 151, 204);>
+   <div class="card" style="background-color: rgb(133, 151, 204);">
     <h3><a href="https://drive.google.com/file/d/1gsuvD-ylTMRk8VJaoT8crpfotM3A-x96/view?usp=drive_link">French</a></h3>
     <p>PYQs</p>
   </div>
 
-  <div class="card"style=" background-color: rgb(13, 81, 100); >
+  <div class="card"style=" background-color: rgb(13, 81, 100);" >
     <h3><a href="https://drive.google.com/file/d/1ZpJsA4We5o_7HThqxYNmPu4viz0Hl9kq/view?usp=drive_link">German</a></h3>
     <p>PYQs</p>
   </div>
