--- a/flind.html
+++ b/flind.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>Foreign Language Materials</title>
         <link rel="stylesheet" type="text/css" href="whole.css">
+         <link rel="icon" href="favicon.png" type="image/png">
     </head>
     <body>
         
