--- a/flind.html
+++ b/flind.html
@@ -44,5 +44,7 @@
 <br>
 <h3>Check Books Availability in VIT Library</h3>
 <div class="cat"><a href="https://webopaccc.vit.ac.in/"> VIT Library Catalogue</a></div>
+ <div class="vase">
+<a href="index.html"> Go Back to Home!</a></div>
 </body>
 </html>
