--- a/stsind.html
+++ b/stsind.html
@@ -5,9 +5,12 @@
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>Soft Skills Materials</title>
         <link rel="stylesheet" type="text/css" href="whole.css">
+         <link rel="icon" href="favicon.png" type="image/png">
     </head>
     <body>
         
         <h1><b> Soft Skills Materials </b></h1>
+         <div class="vase">
+            <a href="index.html"> Go Back to Home!</a></div>
 
     </body>
