--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </div>
 
   <div class="card">
-    <h3><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSBnNVZQMxHSCgLwjtShSdNTZRJfTZWPwGXpDswnPNDwRLqkfKqnTDJFkCxwCtBsNCJSNfdB">Contact Me</a></h3>
+    <h3><a href="mailto:divyapriya382006@gmail.com">Contact Me</a></h3>
     <p>Reach out for collabs, suggestions or help</p>
   </div>
 <h3>Check Books Availability in VIT Library</h3>
