--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 <h3>Check Books Availability in VIT Library</h3>
 <div class="cat"><a href="https://webopaccc.vit.ac.in/"> VIT Library Catalogue</a></div>
 <br>
-<h3>Visitor Count</h3>      
+<!-- <h3>Visitor Count</h3>      
 <a href="https://www.hitwebcounter.com" target="_blank">
-<img src="https://hitwebcounter.com/counter/counter.php?page=20953104&style=0006&nbdigits=5&type=ip&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>                                    
+<img src="https://hitwebcounter.com/counter/counter.php?page=20953104&style=0006&nbdigits=5&type=ip&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>                                     -->
 </body>
 </html>
