--- a/caoind.html
+++ b/caoind.html
@@ -51,6 +51,6 @@
 <h3>Check Books Availability in VIT Library</h3>
 <div class="cat"><a href="https://webopaccc.vit.ac.in/"> VIT Library Catalogue</a></div>
         <nav>        <div class="vase">
-            <a href="index.html"> Go Back to Home!</a></div></nav>
+            <a href="https://divyapriya382006.github.io/3rd-Semester/"> Go Back to Home!</a></div></nav>
 </body>
 </html>
