--- a/cvlaind.html
+++ b/cvlaind.html
@@ -59,6 +59,6 @@
     <a href="https://archive.org/details/higher-engineering-mathematics"><img src="cvla book6.jpeg" class="book-img"/></a>
 </div>
 <h3>Check Books Availability in VIT Library</h3>
-<div class="cat"><a href="https://webopaccc.vit.ac.in/"> VIT Library Catalogue</a></div>
+<div class="cat"><a href="https://divyapriya382006.github.io/3rd-Semester/"> VIT Library Catalogue</a></div>
 </body>
 </html>
