--- a/dsaind.html
+++ b/dsaind.html
@@ -27,7 +27,7 @@
     
   <nav>
       <div class="vase">
-            <a href="index.html"> Go Back to Home!</a></div>
+            <a href="https://divyapriya382006.github.io/3rd-Semester/"> Go Back to Home!</a></div>
       <ul>
         
         <li> <a href="dsamod.html">Modules</a></li>
