--- a/javaind.html
+++ b/javaind.html
@@ -31,7 +31,7 @@
         <li> <a href="https://drive.google.com/drive/folders/1v6OrDz0oZ8wJWL-8VSl7n5-28aWzv24y">Total Java PDF</a></li>
        </ul> 
        <div class="vase">
-            <a href="index.html"> Go Back to Home!</a></div>
+            <a href="https://divyapriya382006.github.io/3rd-Semester/"> Go Back to Home!</a></div>
 
 </nav>
 <br>
