--- a/mpmcind.html
+++ b/mpmcind.html
@@ -22,7 +22,7 @@
         
      </ul> 
   <div class="vase">
-            <a href="index.html"> Go Back to Home!</a></div>
+            <a href="https://divyapriya382006.github.io/3rd-Semester/"> Go Back to Home!</a></div>
 </nav>
 <br>
 <br>
