--- a/mpmcmod.html
+++ b/mpmcmod.html
@@ -33,7 +33,7 @@
     </div>
     <!-- <img src="Screenshot 2025-06-17 020246.png" class="syl"> -->
         <div class="vase">
-            <a href="index.html"> Go Back to Home!</a></div>
+            <a href="https://divyapriya382006.github.io/3rd-Semester/"> Go Back to Home!</a></div>
     <!-- <button class="butu"><a href="http://127.0.0.1:5500/Duplicate/index.html"> Go Back</a></button>  -->
 </nav>
 </body>
