--- a/stsind.html
+++ b/stsind.html
@@ -19,6 +19,6 @@
         </div>
         
          <div class="vase">
-            <a href="index.html"> Go Back to Home!</a></div>
+            <a href="https://divyapriya382006.github.io/3rd-Semester/"> Go Back to Home!</a></div>
 
     </body>
